<resources>
    <string name="app_name">Chat App - Kotlin_</string>
    <string name="nombre_desarrollador">Gabriel Viloria</string>

    <string name="Btn_ir_registro">Registrarme</string>
    <string name="Btn_ir_logeo">Ingresar</string>

    <string name="R_Et_nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_salir">Cerrar sesión</string>
</resources>