<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="10dp">
        <EditText
            android:id="@+id/R_Et_nombre_usuario"
            android:hint="@string/R_Et_nombre_usuario"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/R_Et_email"
            android:hint="@string/R_Et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/R_Et_password"
            android:hint="@string/R_Et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/R_Et_r_password"
            android:hint="@string/R_Et_r_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/Btn_registrar"
            android:text="@string/Btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>